...
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />

                <ProgressBar
                        android:id="@+id/pbLoading"
                        android:layout_width="match_parent"
...
